tests/lean/revert_err.lean.expected.out
revert_err.lean:3:3: error: revert tactic failed, expecting local variable, found 'and a b'
state:
a b : Prop
⊢ true
